--- a/build.gradle
+++ b/build.gradle
@@ -14,6 +14,7 @@ dependencies {
     implementation 'es.usc.citius.hipster:hipster-core:1.0.1'
     implementation 'info.picocli:picocli:4.7.1'
     implementation 'ch.qos.logback:logback-classic:1.4.7'
+    implementation 'org.apache.commons:commons-collections4:4.4'
     testImplementation 'junit:junit:4.13.2'
     testImplementation 'org.junit.jupiter:junit-jupiter:5.9.2'
 
